--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^6.0.1",
+    "deep-freeze": "^0.0.1",
+    "eslint": "^4.19.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts-ts": "2.16.0"
+    "react-redux": "^5.0.7",
+    "react-scripts-ts": "2.16.0",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "test": "npm run lint && react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject",
+    "lint": "./node_modules/tslint/bin/tslint --project ./"
   },
   "devDependencies": {
+    "@types/deep-freeze": "^0.1.1",
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.0",
     "@types/react": "^16.3.16",
