--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-redux": "^6.0.1",
-    "deep-freeze": "^0.0.1",
     "eslint": "^4.19.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -25,6 +23,10 @@
     "@types/node": "^10.3.0",
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
-    "typescript": "^2.9.1"
+    "@types/react-redux": "^6.0.1",
+    "@types/react-test-renderer": "^16.0.1",
+    "react-test-renderer": "^16.4.0",
+    "typescript": "^2.9.1",
+    "deep-freeze": "^0.0.1"
   }
 }
