--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.2.0",
+    "@types/material-ui": "^0.20.8",
     "eslint": "^4.19.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -25,8 +27,8 @@
     "@types/react-dom": "^16.0.5",
     "@types/react-redux": "^6.0.1",
     "@types/react-test-renderer": "^16.0.1",
+    "deep-freeze": "^0.0.1",
     "react-test-renderer": "^16.4.0",
-    "typescript": "^2.9.1",
-    "deep-freeze": "^0.0.1"
+    "typescript": "^2.9.1"
   }
 }
