--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.0",
+    "@material-ui/icons": "^1.1.0",
     "@types/material-ui": "^0.20.8",
     "eslint": "^4.19.1",
     "react": "^16.4.0",
