--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^1.2.0",
     "@material-ui/icons": "^1.1.0",
+    "@types/classnames": "^2.2.4",
     "@types/material-ui": "^0.20.8",
+    "@types/prop-types": "^15.5.3",
+    "classnames": "^2.2.5",
     "eslint": "^4.19.1",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
