--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@types/classnames": "^2.2.4",
     "@types/material-ui": "^0.20.8",
     "@types/prop-types": "^15.5.3",
+    "@types/react-router-dom": "^4.2.7",
     "classnames": "^2.2.5",
     "eslint": "^4.19.1",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.16.0",
     "redux": "^4.0.0"
   },
