--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@types/deep-freeze": "^0.1.1",
+    "@types/enzyme": "^3.1.10",
+    "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.0",
     "@types/react": "^16.3.16",
@@ -38,6 +40,8 @@
     "@types/react-redux": "^6.0.1",
     "@types/react-test-renderer": "^16.0.1",
     "deep-freeze": "^0.0.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "react-test-renderer": "^16.4.0",
     "typescript": "^2.9.1"
   }
