--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-autosuggest": "^9.3.4",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.0.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.16.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "@types/react": "^16.3.16",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.1",
+    "typescript": "^2.9.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -35,14 +39,10 @@
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.0",
-    "@types/react": "^16.3.16",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-redux": "^6.0.1",
     "@types/react-test-renderer": "^16.0.1",
     "deep-freeze": "^0.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "react-test-renderer": "^16.4.0",
-    "typescript": "^2.9.1"
+    "react-test-renderer": "^16.4.0"
   }
 }
