--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@types/classnames": "^2.2.4",
     "@types/material-ui": "^0.20.8",
     "@types/prop-types": "^15.5.3",
+    "@types/react": "^16.3.16",
     "@types/react-autosuggest": "^9.3.4",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.1",
     "@types/react-router-dom": "^4.2.7",
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.5",
@@ -21,9 +24,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.16.0",
     "redux": "^4.0.0",
-    "@types/react": "^16.3.16",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-redux": "^6.0.1",
+    "tslint": "^5.10.0",
     "typescript": "^2.9.1"
   },
   "scripts": {
